Use swagger from core auto-generate, to make it impossible to shift
